# calc-notes

./: LICENSE.md  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/static/: index.html  main.js
